--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@types/three": "^0.179.0",
+    "dotenv": "^17.2.1",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
