--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/three": "^0.179.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.41.0",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.540.0",
     "next": "^15.2.3",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
