feat(admin-auth): add optional Basic Auth for /admin routes and update env example
- Allow HTTP Basic Auth specifically for /admin and /api/admin in middleware
- Challenge with WWW-Authenticate when Clerk not signed in and creds configured
- Bypass Clerk for admin if correct Basic creds provided
- Preserve existing Clerk-based auth and role checks (ADMIN/SUPERADMIN) as fallback
- Document ADMIN_BASIC_USER and ADMIN_BASIC_PASS in .env.example

Files:
- src/middleware.ts
- .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,9 @@ STACK_SECRET_SERVER_KEY=STACK_SECRET_SERVER_KEY
 
 
 CLERK_SECRET_KEY=CLERK_SECRET_KEY
+
+# Optional: enable Basic Auth just for /admin and /api/admin
+# If provided, middleware will allow HTTP Basic Auth for admin routes
+# and challenge with a browser prompt when Clerk is not signed in.
+ADMIN_BASIC_USER=admin
+ADMIN_BASIC_PASS=change_me
