docs(readme,env): rewrite README and align .env.example with actual vars
- Replace T3 template with project-specific README (stack, features, API, Sentry, deployment)
- Add comprehensive environment docs; switch to Clerk keys; add optional Sentry/Admin vars
- Include DB/migrations instructions and troubleshooting

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,61 @@
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
+# When adding additional environment variables, update the schema in "/src/env.js".
 
-# Recommended for most uses
-DATABASE_URL=DATABASE_URL
+###############################################
+# Database (Drizzle / PostgreSQL)
+###############################################
+# Required by src/env.js
+DATABASE_URL=postgres://postgres:password@localhost:5432/kamkmserve
 
-# Neon Auth environment variables for Next.js
-NEXT_PUBLIC_STACK_PROJECT_ID=NEXT_PUBLIC_STACK_PROJECT_ID
-NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY
-STACK_SECRET_SERVER_KEY=STACK_SECRET_SERVER_KEY
+# Optional: direct (non-pooled) connection string (e.g., for certain tools)
+DATABASE_URL_UNPOOLED=postgres://postgres:password@localhost:5432/kamkmserve
 
+# Optional: if you prefer constructing URLs from parts (e.g., Neon/Vercel templates)
+# PGHOST=localhost
+# PGHOST_UNPOOLED=localhost
+# PGUSER=postgres
+# PGDATABASE=kamkmserve
+# PGPASSWORD=password
 
-CLERK_SECRET_KEY=CLERK_SECRET_KEY
+# Optional: Vercel Postgres-style variables (not used by src/env.js directly)
+# POSTGRES_URL=
+# POSTGRES_URL_NON_POOLING=
+# POSTGRES_USER=
+# POSTGRES_HOST=
+# POSTGRES_PASSWORD=
+# POSTGRES_DATABASE=
+# POSTGRES_URL_NO_SSL=
+# POSTGRES_PRISMA_URL=
 
-# Optional: enable Basic Auth just for /admin and /api/admin
-# If provided, middleware will allow HTTP Basic Auth for admin routes
+###############################################
+# Authentication (Clerk)
+###############################################
+# Required by src/env.js
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_XXXXXXXXXXXXXXXXXXXXXXXX
+CLERK_SECRET_KEY=sk_XXXXXXXXXXXXXXXXXXXXXXXX
+
+# Optional Clerk route configuration
+CLERK_SIGN_IN_URL=/sign-in
+CLERK_SIGN_UP_URL=/sign-up
+CLERK_AFTER_SIGN_IN_URL=/admin
+CLERK_AFTER_SIGN_UP_URL=/admin
+
+###############################################
+# Admin Access (Optional Basic Auth fallback)
+###############################################
+# If provided, middleware/handlers may allow HTTP Basic Auth for admin routes
 # and challenge with a browser prompt when Clerk is not signed in.
 ADMIN_BASIC_USER=admin
 ADMIN_BASIC_PASS=change_me
+
+###############################################
+# Sentry (Optional)
+###############################################
+# Used by the Sentry build plugin to upload source maps in CI. Do NOT commit a real token here.
+# https://docs.sentry.io/platforms/javascript/guides/nextjs/manual-setup/
+SENTRY_AUTH_TOKEN=
+
+###############################################
+# Build & Runtime (Optional)
+###############################################
+# Skip env validation at build time (useful for Docker/CI). Prefer setting this only in CI.
+# SKIP_ENV_VALIDATION=1
