--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "three": "^0.179.1",
     "zod": "^3.24.2"
   },
