feat(admin): add debounced search for coupons and referrals; coupons API supports q filter

--- a/.env.example
+++ b/.env.example
@@ -17,13 +17,13 @@ DATABASE_URL_UNPOOLED=postgres://postgres:password@localhost:5432/kamkmserve
 # PGPASSWORD=password
 
 # Optional: Vercel Postgres-style variables (not used by src/env.js directly)
-# POSTGRES_URL=
-# POSTGRES_URL_NON_POOLING=
+# DATABASE_URL=
+# DATABASE_URL_NON_POOLING=
 # POSTGRES_USER=
 # POSTGRES_HOST=
 # POSTGRES_PASSWORD=
 # POSTGRES_DATABASE=
-# POSTGRES_URL_NO_SSL=
+# DATABASE_URL_NO_SSL=
 # POSTGRES_PRISMA_URL=
 
 ###############################################
