--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hot-toast": "^2.6.0",
-    "three": "^0.179.1",
+    "sonner": "^2.0.7",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -44,8 +43,6 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
-    "drizzle-kit": "^0.30.5",
-    "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.3",
