--- a/package.json
+++ b/package.json
@@ -25,13 +25,11 @@
     "@neondatabase/serverless": "^1.0.1",
     "@sentry/nextjs": "^10.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@types/three": "^0.179.0",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.41.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.540.0",
     "next": "^15.2.3",
-    "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.7",
@@ -43,6 +41,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "drizzle-kit": "^0.31.4",
     "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "postcss": "^8.5.3",
