feat(sentry): env-based DSNs + client init; fix ESLint and Next root warning

--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,11 @@ ADMIN_BASIC_PASS=change_me
 # https://docs.sentry.io/platforms/javascript/guides/nextjs/manual-setup/
 SENTRY_AUTH_TOKEN=
 
+# DSNs for Sentry. Use NEXT_PUBLIC_SENTRY_DSN for browser-side reporting and SENTRY_DSN for server/edge.
+# Do NOT commit real secrets. Provide these via your deployment environment.
+SENTRY_DSN=
+NEXT_PUBLIC_SENTRY_DSN=
+
 ###############################################
 # Build & Runtime (Optional)
 ###############################################
