--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
+    "@headlessui/react": "^2.2.7",
+    "@heroicons/react": "^1.0.6",
     "@neondatabase/serverless": "^1.0.1",
     "@sentry/nextjs": "^10.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
@@ -32,6 +34,7 @@
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-syntax-highlighter": "^15.6.3",
     "sonner": "^2.0.7",
     "zod": "^3.24.2"
   },
@@ -41,6 +44,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "drizzle-kit": "^0.31.4",
     "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
