--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "installCommand": "pnpm install && pnpm approve-builds -y",
+  "installCommand": "pnpm install --config.ignore-scripts=false",
   "buildCommand": "pnpm run build",
   "framework": "nextjs"
 }
