--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,5 +38,5 @@
     "**/*.js",
     ".next/types/**/*.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "test", "**/*.test.ts", "**/*.test.tsx", "**/__tests__/**"]
 }
