infra(terraform): add IaC scaffold, network and SSH hardening placeholders; standardize EOL via .gitattributes; update checklist

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,12 @@ yarn-error.log*
 .idea
 # Sentry Config File
 .env.sentry-build-plugin
+
+# terraform
+**/.terraform/
+**/terraform.tfstate
+**/terraform.tfstate.*
+**/*.tfstate.backup
+**/*.tfvars
+**/crash.log
+**/crash.*.log
