--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,11 @@
 # Database (Drizzle / PostgreSQL)
 ###############################################
 # Required by src/env.js
-DATABASE_URL=postgres://postgres:password@localhost:5432/kamkmserve
+## Use TLS in transit. For local dev without TLS, remove the query string.
+DATABASE_URL=postgres://postgres:password@localhost:5432/kamkmserve?sslmode=require
 
 # Optional: direct (non-pooled) connection string (e.g., for certain tools)
-DATABASE_URL_UNPOOLED=postgres://postgres:password@localhost:5432/kamkmserve
+DATABASE_URL_UNPOOLED=postgres://postgres:password@localhost:5432/kamkmserve?sslmode=require
 
 # Optional: if you prefer constructing URLs from parts (e.g., Neon/Vercel templates)
 # PGHOST=localhost
