--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@neondatabase/serverless": "^1.0.1",
     "@sentry/nextjs": "^10.5.0",
     "@t3-oss/env-nextjs": "^0.12.0",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.3",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.41.0",
     "framer-motion": "^12.23.12",
