--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,9 @@ jobs:
           SKIP_ENV_VALIDATION: "true"
         run: pnpm run build
 
+      - name: Bundle budgets check
+        run: pnpm run budgets:check
+
   deploy:
     if: >-
       ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' && !cancelled() && !failure() }}
