--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "budgets:check": "node scripts/check-budgets.mjs"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.31.4",
