test(a11y): add axe-based smoke test; enable vitest globals and @ alias; CI step for a11y

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Unit tests
         run: pnpm run test:run
 
+      - name: Accessibility (axe)
+        run: pnpm run test:a11y
+
       - name: Build (skip env validation)
         env:
           SKIP_ENV_VALIDATION: "true"
