--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:a11y": "vitest run -t a11y",
     "typecheck": "tsc --noEmit",
     "budgets:check": "node scripts/check-budgets.mjs"
   },
@@ -66,7 +67,9 @@
     "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "axe-core": "^4.10.2",
+    "jest-axe": "^9.0.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
