--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
+    "e2e": "playwright test",
+    "e2e:ci": "playwright test --reporter=dot",
+    "e2e:install": "playwright install --with-deps",
     "migrate:safe": "node scripts/check-migrations.mjs",
     "start": "next start",
     "test": "vitest",
@@ -58,6 +61,7 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.0.1",
     "@vitest/ui": "^3.2.4",
+    "@playwright/test": "^1.48.2",
     "drizzle-kit": "^0.31.4",
     "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
