--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
+    "analyze": "ANALYZE=true next build",
     "e2e": "playwright test",
     "e2e:ci": "playwright test --reporter=dot",
     "e2e:install": "playwright install --with-deps",
@@ -52,6 +53,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@next/bundle-analyzer": "^15.5.0",
+    "@playwright/test": "^1.48.2",
     "@tailwindcss/postcss": "^4.0.15",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -61,10 +64,11 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.0.1",
     "@vitest/ui": "^3.2.4",
-    "@playwright/test": "^1.48.2",
+    "axe-core": "^4.10.2",
     "drizzle-kit": "^0.31.4",
     "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
+    "jest-axe": "^9.0.0",
     "jsdom": "^26.1.0",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
@@ -72,9 +76,7 @@
     "tailwindcss": "^4.0.15",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.27.0",
-    "vitest": "^3.2.4",
-    "axe-core": "^4.10.2",
-    "jest-axe": "^9.0.0"
+    "vitest": "^3.2.4"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.3"
