--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.3",
     "sonner": "^2.0.7",
+    "svix": "^1.74.1",
     "zod": "^3.24.2"
   },
   "devDependencies": {
