feat(contact): send contact submissions via Resend
- Integrate Resend in API route to deliver contact emails
- Add reply-to so recipients can reply directly to submitter
- Escape HTML in email body for safety
- Return 502 on email service failures; keep request/response contract intact
- Set API route runtime to Node.js for SDK compatibility
- Extend env schema with RESEND_API_KEY and CONTACT_TO
- Update .env.example with Resend variables
- Add `resend` dependency to package.json

Files:
- src/app/api/contact/route.ts
- src/env.js
- .env.example
- package.json

Notes:
- Set RESEND_API_KEY in environment; optionally set CONTACT_TO (defaults to support@kamkmserve.com)

--- a/.env.example
+++ b/.env.example
@@ -61,6 +61,15 @@ SENTRY_DSN=
 NEXT_PUBLIC_SENTRY_DSN=
 
 ###############################################
+# Email (Resend)
+###############################################
+# Required to send contact form emails
+# Generate an API key at https://resend.com/api-keys
+RESEND_API_KEY=
+# Optional: where to receive contact messages (defaults to support@kamkmserve.com)
+CONTACT_TO=
+
+###############################################
 # Build & Runtime (Optional)
 ###############################################
 # Skip env validation at build time (useful for Docker/CI). Prefer setting this only in CI.
