--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-syntax-highlighter": "^15.6.3",
+    "resend": "^4.8.0",
     "sonner": "^2.0.7",
     "svix": "^1.74.1",
     "zod": "^3.24.2"
