feat(seo): add sitemap and robots; introduce NEXT_PUBLIC_SITE_URL

--- a/.env.example
+++ b/.env.example
@@ -74,3 +74,7 @@ CONTACT_TO=
 ###############################################
 # Skip env validation at build time (useful for Docker/CI). Prefer setting this only in CI.
 # SKIP_ENV_VALIDATION=1
+
+# Public site URL used for absolute links in sitemap/robots and metadata
+# Example: https://kamkmserve.com
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
